# sherlock-ocaml

./: .build_system_hash  .gitignore  .gitlab-ci.yml  README.md  dune  dune-project  sherlock.opam
.github/: c-cpp.yml
.github/workflows/: ci.yml
retractor/: dune  retractor.ml
scripts/: check_opam_files.sh  install_build_deps.sh  opam-test-all.sh
src/: board.ml  chess.ml  chess.mli  color.ml  debug.ml  dune  legality.ml  mobility.ml  move.ml  position.ml  retraction.ml
test/: dune  test_board.ml  test_color.ml  test_compositions.ml  test_legality.ml  test_move.ml  test_position.ml  test_retraction.ml  vampires.ml
